[build_sphinx]
source-dir = docs/
build-dir  = docs/_build
all_files  = 1

[upload_sphinx]
upload-dir = docs/_build/html

[bumpversion]
current_version = 0.1.10
commit = True
tag = True

[metadata]
description-file = README.md

[bumpversion:file:setup.py]

[bumpversion:file:flask_perm/__init__.py]

[bumpversion:file:docs/conf.py]
