[bumpversion]
current_version = 0.2.2
commit = True
tag = True

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[upload_sphinx]
upload-dir = docs/_build/html

[metadata]
description-file = README.md

[bumpversion:file:setup.py]

[bumpversion:file:flask_perm/__init__.py]

[bumpversion:file:docs/conf.py]

